# mendel

./: .gitignore  CHANGELOG.md  ParseCode.hs  README.md  fourmolu.yaml  mendel.cabal
.github/workflows/: fourmolu.yml  haskell-ci.yml
app/: Main.hs  Options.hs
src/Test/Mendel/: Config.hs  Mutation.hs  MutationOperator.hs  MutationVariant.hs  Parser.hs  Printer.hs
test/: Main.hs
test/candidate/: ReverseClausesInPatternMatch.hs  ReverseString.hs  SwapIfElse.hs  SwapPlusMinus.hs
test/golden/: ReverseClausesInPatternMatch.hs  ReverseString.hs  SwapIfElse.hs  SwapPlusMinus.hs
