cabal-version:      3.0
name:               mendel
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Mutation Operators for Haskell Sourcecode
description:        Use Mutation Operators to generate Mutants of Haskell Sourcecode.
                    The library works with GHC's representation of abstract syntax trees and generates mutants of Haskell modules. These mutants can then be used for mutation testing, fault injection, for benchmarking fault localization techniques etc.
homepage:           https://github.com/BinderDavid/mendel
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Binder
maintainer:         david.binder@uni-tuebingen.de
copyright:          David Binder, 2023
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    Readme.md
tested-with:        GHC == 9.2.7 || ==9.4.5 || ==9.6.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable mendel
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        mendel
    hs-source-dirs:   app
    default-language: GHC2021

test-suite mendel-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        mendel
