cabal-version:      3.0
name:               mendel
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Mutation Operators for Haskell Sourcecode
description:        Use Mutation Operators to generate Mutants of Haskell Sourcecode.
                    The library works with GHC's representation of abstract syntax trees and generates mutants of Haskell modules. These mutants can then be used for mutation testing, fault injection, benchmarking fault localization and repair techniques etc.
homepage:           https://github.com/BinderDavid/mendel
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Binder
maintainer:         david.binder@uni-tuebingen.de
copyright:          David Binder, 2023
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with:        GHC == 9.2.7 || ==9.4.5 || ==9.6.2
extra-source-files: test/golden/ReverseString.hs
                    test/golden/ReverseClausesInPatternMatch.hs
                    test/golden/SwapPlusMinus.hs
                    test/golden/SwapIfElse.hs
                    test/candidate/ReverseString.hs
                    test/candidate/ReverseClausesInPatternMatch.hs
                    test/candidate/SwapPlusMinus.hs
                    test/candidate/SwapIfElse.hs
                    test/temp/.gitkeep

source-repository head
    type: git
    location: https://github.com/BinderDavid/mendel
    
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.Mendel.Parser
                      Test.Mendel.Printer
                      Test.Mendel.Mutation
                      Test.Mendel.MutationOperator
                      Test.Mendel.MutationVariant
                      Test.Mendel.Config
    build-depends:    base >= 4.16 && < 4.20,
                      ghc-lib-parser ==9.6.2.20230523,
                      syb >= 0.7 && < 0.8,
                      bytestring >=0.11 && < 0.13,
                      ghc-lib-parser-ex 
    hs-source-dirs:   src
    default-language: GHC2021

executable mendel
    import:           warnings
    main-is:          Main.hs
    other-modules:    Options
                      Paths_mendel
    autogen-modules:  Paths_mendel
    build-depends:
        base >= 4.16 && < 4.20,
        ghc-lib-parser ==9.6.2.20230523,
        optparse-applicative >= 0.18 && <0.19,
        mendel
    hs-source-dirs:   app
    default-language: GHC2021

test-suite mendel-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.16 && < 4.20,
        filepath ^>= 1.4,
        ghc-lib-parser ==9.6.2.20230523,
        tasty ^>= 1.4,
        tasty-golden ^>= 2.3,
        mendel
